// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/index.tsx should render correct LIST_HEIGHT 200rpx 1`] = `
<scroll-view
  onScroll={[Function]}
  scrollY={true}
>
  <view
    style={
      Object {
        "background": undefined,
        "backgroundSize": undefined,
        "height": 200,
        "position": "relative",
      }
    }
  >
    <view
      style={
        Object {
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <view
        className="recycle-view-item"
        style={
          Object {
            "height": 100,
          }
        }
      >
        <div>
          hello
        </div>
      </view>
      <view
        className="recycle-view-item"
        style={
          Object {
            "height": 100,
          }
        }
      >
        <div>
          hello
        </div>
      </view>
    </view>
  </view>
</scroll-view>
`;

exports[`src/index.tsx should render correctly in platform ali 1`] = `
<scroll-view
  onScroll={[Function]}
  scrollY={true}
>
  <view
    style={
      Object {
        "background": undefined,
        "backgroundSize": undefined,
        "height": 0,
        "position": "relative",
      }
    }
  >
    <view
      style={
        Object {
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </view>
</scroll-view>
`;

exports[`src/index.tsx should render correctly in platform toutiao 1`] = `
<scroll-view
  onScroll={[Function]}
  scrollY={true}
>
  <view
    style={
      Object {
        "background": undefined,
        "backgroundSize": undefined,
        "height": 0,
        "position": "relative",
      }
    }
  >
    <view
      style={
        Object {
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </view>
</scroll-view>
`;

exports[`src/index.tsx should render correctly in platform wechat 1`] = `
<scroll-view
  lowerThreshold={50}
  onScroll={[Function]}
  scrollY={true}
  upperThreshold={50}
>
  <view
    style={
      Object {
        "background": undefined,
        "backgroundSize": undefined,
        "height": 0,
        "position": "relative",
      }
    }
  >
    <view
      style={
        Object {
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </view>
</scroll-view>
`;

exports[`src/index.tsx should render placeholder-image, header and bottom 1`] = `
<scroll-view
  onScroll={[Function]}
  scrollY={true}
>
  <view
    className="recycle-view-header"
    style={
      Object {
        "height": 50,
      }
    }
  >
    <div>
      header
    </div>
  </view>
  <view
    style={
      Object {
        "background": "url(\\"https://via.placeholder.com/150\\") repeat-y",
        "backgroundSize": "contain",
        "height": 100,
        "position": "relative",
      }
    }
  >
    <view
      style={
        Object {
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <view
        className="recycle-view-item"
        style={
          Object {
            "height": 100,
          }
        }
      >
        <div>
          hello
        </div>
      </view>
    </view>
  </view>
  <view
    className="recycle-view-bottom"
    style={
      Object {
        "height": 50,
      }
    }
  >
    <div>
      bottom
    </div>
  </view>
</scroll-view>
`;
